dev/cli-proxy-api/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: cli-proxy-api
  annotations:
    external-dns.alpha.kubernetes.io/target: 202.215.58.76
spec:
  entryPoints:
    - websecure
  routes:
    - match: >-
        Host(`cliproxy.mtaku3.com`) && (
        Path(`/management.html`) ||
        PathPrefix(`/v0/management`) ||
        PathPrefix(`/v8/management`) ||
        PathPrefix(`/v0/resource/plugins`))
      kind: Rule
      priority: 100
      middlewares:
        - name: tinyauth
          namespace: traefik
      services:
        - name: cli-proxy-api
          port: http
    - match: Host(`cliproxy.mtaku3.com`)
      kind: Rule
      priority: 10
      services:
        - name: cli-proxy-api
          port: http
  tls:
    secretName: web-tls-cert
